@@ -21,3 +21,27 @@ To play you have to choose a planet color, then drag and drop from your planet t
 If you want to use strong vessels, then right clicked on your planet before sending vessels. You'll see a black outline outside your planet, that mean that you are in strong mode for this planet. Of course, your planet produce much less strong vessels than normal vessels. 
 
 Dont forget to choose the pourcentage your reseve that you want to send.
+
+## How to compile and execute 
+
+First of all, of course, you'll need java and javac installed on your computer. 
+
+After that, you have to install javafx : 
+
+```
+  sudo apt install openjfx
+```
+
+then you can compile from the game mode folder than you want to play (advanced or basic) :
+
+```
+  javac -classpath /usr/share/openjfx/lib/ --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml *.java
+
+```
+
+then you can execute :
+
+```
+  /usr/lib/jvm/java-13-openjdk-amd64/bin/java --module-path /usr/share/openjfx/lib --add-modules javafx.controls,javafx.fxml -Dfile.encoding=UTF-8 -classpath /PATH/TO/THE/CLONE/YOU/DID/bin:/PATH/TO/THE/CLONE/YOU/DID/jfxrt.jar:/usr/share/openjfx/lib/javafx.base.jar Game
+
+```
